2003-10-02  James Henstridge  <james@daa.com.au>

	* modulesets/gnome26.modules: readd dbus, now that hp has fixed
	the CVS root.

2003-10-01  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk_buildscript.py:
	* jhbuild.glade:
	* jhbuild.py:

	Add a "Do not build" option to the gui.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: commented-out dbus because jamesh
	thinks that the dbus anon cvs needs fixing and it'll cause problems
	for people who have used this when it is fixed.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: Added dbus.

2003-10-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome26.modules: meta-gnome-c++: Added libgdamm and
	libgnomeprint*mm.

2003-09-30  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of ORBit2.

Tue Sep 30 14:31:06 2003  Jonathan Blandford  <jrb@redhat.com>

	* modulesets/gnome26.modules: move to glib/pango/gtk+-HEAD.

2003-09-29  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branch of gnome-speech.

2003-09-29  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Don't use gnome-2-4 branch for libbonoboui.

2003-09-29  Bryan Forbes  <mxpxfifws@yahoo.com>

	* modulesets/gnome24.modules: Use gnome-2-4 branches of libgnomeui and
	gconf.

2003-09-29  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome24.modules: Use gnome-2-4 branches of 
	libgnomeprint*.

2003-09-29  Anders Carlsson  <andersca@gnome.org>

	* modulesets/gnome24.modules: Use gnome-2-4 branches of libgnome:

2003-09-27  Seth Nickell  <seth@gnome.org>

	* Makefile:
	* jhbuild.desktop:

	Install a .desktop file for the GUI mode.
	
	* gtk_buildscript.py:

	Require GConf.

2003-09-26  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk_buildscript.py:

	Fix jhbuild gui to work also from outside jhbuild dir

2003-09-24  James Henstridge  <james@daa.com.au>
