@@ -959,7 +959,7 @@
       <dep package="libgnomeui" />
     </dependencies>
   </cvsmodule>
-  <mozillamodule id="mozilla" autogenargs="--enable-default-toolkit=gtk2 --disable-mailnews --disable-ldap --disable-debug --enable-optimize --disable-tests --enable-crypto --enable-xft --with-system-zlib" cvsroot="mozilla.org" branch="MOZILLA_1_4_RELEASE">
+  <mozillamodule id="mozilla" autogenargs="--enable-default-toolkit=gtk2 --disable-mailnews --disable-ldap --disable-debug --enable-optimize --disable-tests --enable-crypto --enable-xft --with-system-zlib" cvsroot="mozilla.org" revision="MOZILLA_1_4_RELEASE">
     <dependencies>
       <dep package="gtk+" />
     </dependencies>
