@@ -1,3 +1,14 @@
+2003-10-06  James Henstridge  <james@daa.com.au>
+
+	* modulesets/gnome26.modules (mozilla): same here.
+
+	* modulesets/gnome24.modules (mozilla): change attribute name.
+
+	* module.py (read_module_set): s/branch/revision/ for
+	<mozillamodule> elements.
+	(MozillaModule.__init__): s/branch/revision/ here too for
+	completeness.
+
 2003-10-02  James Henstridge  <james@daa.com.au>
 
 	* modulesets/gnome26.modules: readd dbus, now that hp has fixed
